--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
         width: 100%;
       }
     </style>
-    <title>React App</title>
+    <title>Corona in Morocco</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
