--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,10 @@
       crossorigin=""
     ></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=UA-118359086-1"
+      src="https://www.googletagmanager.com/gtag/js?id=UA-118359086-2"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -33,7 +34,7 @@
       }
       gtag("js", new Date());
 
-      gtag("config", "UA-118359086-1");
+      gtag("config", "UA-118359086-2");
     </script>
 
     <style>
