Minor css styling for better user experience

--- a/public/index.html
+++ b/public/index.html
@@ -38,10 +38,9 @@
     </script>
 
     <style>
-      #root {
-        height: 100%;
+      body {
+        overflow: hidden;
       }
-
       @media (min-width: 600px) {
         #statistics {
           position: absolute;
