--- a/public/index.html
+++ b/public/index.html
@@ -21,78 +21,96 @@
       integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
       crossorigin=""
     ></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-118359086-2"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "UA-118359086-2");
+    </script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" 
+    integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" 
+    crossorigin="anonymous">
     <style>
       #root {
         height: 100%;
       }
 
-      @media (min-width: 600px) {
-
-        #statistics {
-          position: absolute;
-          top: 10px;
-          right: 10px;
-          z-index: 1000;
-        }
-
-        #totalcases {
-          background-color: #ffffff;
-          border-radius: 7px;
-          padding: 20px 20px 20px 20px;
-          box-shadow: 4px 4px 4px rgba(0, 0, 0, .4);
-        }
-
-        #cities {
-          background-color: #ffffff;
-          border-radius: 7px;
-          padding: 20px 20px 20px 20px;
-          box-shadow: 4px 4px 4px rgba(0, 0, 0, .4);
-        }
+      #statistics {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        z-index: 1000;
       }
 
-      .react-scrollable-list {
-        -webkit-box-sizing: border-box;
-        -moz-box-sizing: border-box;
-        box-sizing: border-box;
-        height: 300px;
-        width: 250px;
-        overflow-y: scroll;
-      }
-
-      .react-scrollable-list-item {
-        -webkit-box-sizing: border-box;
-        -moz-box-sizing: border-box;
-        box-sizing: border-box;
-        height: 30px;
-        padding: 5px;
+      #totalcases {
         background-color: #ffffff;
-        border-bottom: #ddd solid 1px;
-        pointer-events: none;
+        border-radius: 7px;
+        padding: 20px 20px 20px 20px;
+        box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.4);
       }
 
-      @media (max-width: 599px) {
+      #cities {
+        background-color: #ffffff;
+        border-radius: 7px;
+        padding: 20px 20px 20px 20px;
+        box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.4);
+      }
 
-        #statistics {
-          position: fixed;
-          width: 100% !important;
-          bottom: 5px;
-          z-index: 1000;
-        }
+      #cities-drawer {
+        background-color: #ffffff;
+        border-radius: 7px;
+        padding: 40px 50px 40px 50px;
+        box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.4);
+      }
 
-        #totalcases {
-          background-color: #ffffff;
-          border-radius: 7px;
-          bottom: 5px;
-          padding: 20px 20px 20px 20px;
-          position: fixed;
-          width: 100% !important;
-          bottom: 5px;
-          box-shadow: 4px 4px 4px rgba(0, 0, 0, .4);
-        }
+      .white {
+        color: #ffffff !important;
+      }
 
-        #cities {
-          visibility: hidden;
-        }
+      .card {
+        border: 0 !important;
+        margin: 15px 0 !important;
+        box-shadow: 0 6px 0 0 rgba(0,0,0,.01), 0 15px 32px 0 rgba(0,0,0,.06) !important;
+        border-radius: 4px !important;
+      }
+
+      .close-button {
+        position: fixed;
+        background: none!important;
+        border: none;
+        padding: 0!important;
+        font-family: arial, sans-serif;
+        font-size: xx-large;
+        right: 2%;
+        top: 2%;
+        cursor: pointer;
+      }
+
+      .gradient-blackberry {
+        background-image: -webkit-linear-gradient(45deg,#843cf7,#38b8f2);
+        background-image: linear-gradient(45deg,#843cf7,#38b8f2);
+        background-repeat: repeat-x;
+      }
+
+      .gradient-ibiza-sunset {
+        background-image: -webkit-linear-gradient(45deg,#ee0979,#ff6a00);
+        background-image: linear-gradient(45deg,#ee0979,#ff6a00);
+        background-repeat: repeat-x;
+      }
+
+      .gradient-green-teal {
+        background-image: -webkit-linear-gradient(45deg,#43a047,#1de9b6);
+        background-image: linear-gradient(45deg,#43a047,#1de9b6);
+        background-repeat: repeat-x;
       }
 
       .leaflet-container {
@@ -115,5 +133,16 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" 
+    crossorigin="anonymous"></script>
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" 
+    integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" 
+    crossorigin="anonymous"></script>
+    
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" 
+    integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" 
+    crossorigin="anonymous"></script>
   </body>
 </html>
