Fixed a design flaw

--- a/public/index.html
+++ b/public/index.html
@@ -70,28 +70,6 @@
         border-radius: 7px;
         padding: 40px 50px 40px 50px;
         box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.4);
-
-      @media (min-width: 600px) {
-        #statistics {
-          position: absolute;
-          top: 10px;
-          right: 10px;
-          z-index: 1000;
-        }
-
-        #totalcases {
-          background-color: #ffffff;
-          border-radius: 7px;
-          padding: 20px 20px 20px 20px;
-          box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.4);
-        }
-
-        #cities {
-          background-color: #ffffff;
-          border-radius: 7px;
-          padding: 20px 20px 20px 20px;
-          box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.4);
-        }
       }
 
       .white {
@@ -118,18 +96,39 @@
       }
 
       .gradient-blackberry {
+        background-image: -moz-linear-gradient(45deg,#843cf7,#38b8f2); /* FF 3.6+ */  
+        background-image: -ms-linear-gradient(45deg,#843cf7,#38b8f2); /* IE10 */  
+        background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #843cf7), color-stop(100%, #38b8f2)); /* Safari 4+, Chrome 2+ */  
+        background-image: -webkit-linear-gradient(45deg,#843cf7,#38b8f2); /* Safari 5.1+, Chrome 10+ */  
+        background-image: -o-linear-gradient(45deg,#843cf7,#38b8f2); /* Opera 11.10 */  
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr=transparent); /* IE6 & IE7 */  
+        -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr=transparent)"; /* IE8+ */  
         background-image: -webkit-linear-gradient(45deg,#843cf7,#38b8f2);
         background-image: linear-gradient(45deg,#843cf7,#38b8f2);
         background-repeat: repeat-x;
       }
 
       .gradient-ibiza-sunset {
+        background-image: -moz-linear-gradient(45deg,#ee0979,#ff6a00); /* FF 3.6+ */  
+        background-image: -ms-linear-gradient(45deg,#ee0979,#ff6a00); /* IE10 */  
+        background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #843cf7), color-stop(100%, #38b8f2)); /* Safari 4+, Chrome 2+ */  
+        background-image: -webkit-linear-gradient(45deg,#ee0979,#ff6a00); /* Safari 5.1+, Chrome 10+ */  
+        background-image: -o-linear-gradient(45deg,#ee0979,#ff6a00); /* Opera 11.10 */  
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr=transparent); /* IE6 & IE7 */  
+        -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr=transparent)"; /* IE8+ */  
         background-image: -webkit-linear-gradient(45deg,#ee0979,#ff6a00);
         background-image: linear-gradient(45deg,#ee0979,#ff6a00);
         background-repeat: repeat-x;
       }
 
       .gradient-green-teal {
+        background-image: -moz-linear-gradient(45deg,#43a047,#1de9b6); /* FF 3.6+ */  
+        background-image: -ms-linear-gradient(45deg,#43a047,#1de9b6); /* IE10 */  
+        background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #843cf7), color-stop(100%, #38b8f2)); /* Safari 4+, Chrome 2+ */  
+        background-image: -webkit-linear-gradient(45deg,#43a047,#1de9b6); /* Safari 5.1+, Chrome 10+ */  
+        background-image: -o-linear-gradient(45deg,#43a047,#1de9b6); /* Opera 11.10 */  
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr=transparent); /* IE6 & IE7 */  
+        -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr=transparent)"; /* IE8+ */  
         background-image: -webkit-linear-gradient(45deg,#43a047,#1de9b6);
         background-image: linear-gradient(45deg,#43a047,#1de9b6);
         background-repeat: repeat-x;
