--- a/public/index.html
+++ b/public/index.html
@@ -2,43 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="theme-color" content="#f42b4e" />
+    <meta name="description" content="Follow corona spread in Morocco" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
-      integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
-      crossorigin=""
-    />
-    <script
-      src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
-      integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
-      crossorigin=""
-    ></script>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=UA-118359086-2"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-
-      gtag("config", "UA-118359086-2");
-    </script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" 
-    integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" 
-    crossorigin="anonymous">
     <style>
       #root {
         height: 100%;
@@ -79,15 +46,16 @@
       .card {
         border: 0 !important;
         margin: 15px 0 !important;
-        box-shadow: 0 6px 0 0 rgba(0,0,0,.01), 0 15px 32px 0 rgba(0,0,0,.06) !important;
+        box-shadow: 0 6px 0 0 rgba(0, 0, 0, 0.01),
+          0 15px 32px 0 rgba(0, 0, 0, 0.06) !important;
         border-radius: 4px !important;
       }
 
       .close-button {
         position: fixed;
-        background: none!important;
+        background: none !important;
         border: none;
-        padding: 0!important;
+        padding: 0 !important;
         font-family: arial, sans-serif;
         font-size: xx-large;
         right: 2%;
@@ -96,41 +64,107 @@
       }
 
       .gradient-blackberry {
-        background-image: -moz-linear-gradient(45deg,#843cf7,#38b8f2); /* FF 3.6+ */  
-        background-image: -ms-linear-gradient(45deg,#843cf7,#38b8f2); /* IE10 */  
-        background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #843cf7), color-stop(100%, #38b8f2)); /* Safari 4+, Chrome 2+ */  
-        background-image: -webkit-linear-gradient(45deg,#843cf7,#38b8f2); /* Safari 5.1+, Chrome 10+ */  
-        background-image: -o-linear-gradient(45deg,#843cf7,#38b8f2); /* Opera 11.10 */  
-        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr=transparent); /* IE6 & IE7 */  
-        -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr=transparent)"; /* IE8+ */  
-        background-image: -webkit-linear-gradient(45deg,#843cf7,#38b8f2);
-        background-image: linear-gradient(45deg,#843cf7,#38b8f2);
+        background-image: -moz-linear-gradient(
+          45deg,
+          #843cf7,
+          #38b8f2
+        ); /* FF 3.6+ */
+        background-image: -ms-linear-gradient(
+          45deg,
+          #843cf7,
+          #38b8f2
+        ); /* IE10 */
+        background-image: -webkit-gradient(
+          linear,
+          left top,
+          left bottom,
+          color-stop(0%, #843cf7),
+          color-stop(100%, #38b8f2)
+        ); /* Safari 4+, Chrome 2+ */
+        background-image: -webkit-linear-gradient(
+          45deg,
+          #843cf7,
+          #38b8f2
+        ); /* Safari 5.1+, Chrome 10+ */
+        background-image: -o-linear-gradient(
+          45deg,
+          #843cf7,
+          #38b8f2
+        ); /* Opera 11.10 */
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr=transparent); /* IE6 & IE7 */
+        -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr=transparent)"; /* IE8+ */
+        background-image: -webkit-linear-gradient(45deg, #843cf7, #38b8f2);
+        background-image: linear-gradient(45deg, #843cf7, #38b8f2);
         background-repeat: repeat-x;
       }
 
       .gradient-ibiza-sunset {
-        background-image: -moz-linear-gradient(45deg,#ee0979,#ff6a00); /* FF 3.6+ */  
-        background-image: -ms-linear-gradient(45deg,#ee0979,#ff6a00); /* IE10 */  
-        background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #843cf7), color-stop(100%, #38b8f2)); /* Safari 4+, Chrome 2+ */  
-        background-image: -webkit-linear-gradient(45deg,#ee0979,#ff6a00); /* Safari 5.1+, Chrome 10+ */  
-        background-image: -o-linear-gradient(45deg,#ee0979,#ff6a00); /* Opera 11.10 */  
-        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr=transparent); /* IE6 & IE7 */  
-        -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr=transparent)"; /* IE8+ */  
-        background-image: -webkit-linear-gradient(45deg,#ee0979,#ff6a00);
-        background-image: linear-gradient(45deg,#ee0979,#ff6a00);
+        background-image: -moz-linear-gradient(
+          45deg,
+          #ee0979,
+          #ff6a00
+        ); /* FF 3.6+ */
+        background-image: -ms-linear-gradient(
+          45deg,
+          #ee0979,
+          #ff6a00
+        ); /* IE10 */
+        background-image: -webkit-gradient(
+          linear,
+          left top,
+          left bottom,
+          color-stop(0%, #843cf7),
+          color-stop(100%, #38b8f2)
+        ); /* Safari 4+, Chrome 2+ */
+        background-image: -webkit-linear-gradient(
+          45deg,
+          #ee0979,
+          #ff6a00
+        ); /* Safari 5.1+, Chrome 10+ */
+        background-image: -o-linear-gradient(
+          45deg,
+          #ee0979,
+          #ff6a00
+        ); /* Opera 11.10 */
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr=transparent); /* IE6 & IE7 */
+        -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr=transparent)"; /* IE8+ */
+        background-image: -webkit-linear-gradient(45deg, #ee0979, #ff6a00);
+        background-image: linear-gradient(45deg, #ee0979, #ff6a00);
         background-repeat: repeat-x;
       }
 
       .gradient-green-teal {
-        background-image: -moz-linear-gradient(45deg,#43a047,#1de9b6); /* FF 3.6+ */  
-        background-image: -ms-linear-gradient(45deg,#43a047,#1de9b6); /* IE10 */  
-        background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #843cf7), color-stop(100%, #38b8f2)); /* Safari 4+, Chrome 2+ */  
-        background-image: -webkit-linear-gradient(45deg,#43a047,#1de9b6); /* Safari 5.1+, Chrome 10+ */  
-        background-image: -o-linear-gradient(45deg,#43a047,#1de9b6); /* Opera 11.10 */  
-        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr=transparent); /* IE6 & IE7 */  
-        -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr=transparent)"; /* IE8+ */  
-        background-image: -webkit-linear-gradient(45deg,#43a047,#1de9b6);
-        background-image: linear-gradient(45deg,#43a047,#1de9b6);
+        background-image: -moz-linear-gradient(
+          45deg,
+          #43a047,
+          #1de9b6
+        ); /* FF 3.6+ */
+        background-image: -ms-linear-gradient(
+          45deg,
+          #43a047,
+          #1de9b6
+        ); /* IE10 */
+        background-image: -webkit-gradient(
+          linear,
+          left top,
+          left bottom,
+          color-stop(0%, #843cf7),
+          color-stop(100%, #38b8f2)
+        ); /* Safari 4+, Chrome 2+ */
+        background-image: -webkit-linear-gradient(
+          45deg,
+          #43a047,
+          #1de9b6
+        ); /* Safari 5.1+, Chrome 10+ */
+        background-image: -o-linear-gradient(
+          45deg,
+          #43a047,
+          #1de9b6
+        ); /* Opera 11.10 */
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr=transparent); /* IE6 & IE7 */
+        -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr=transparent)"; /* IE8+ */
+        background-image: -webkit-linear-gradient(45deg, #43a047, #1de9b6);
+        background-image: linear-gradient(45deg, #43a047, #1de9b6);
         background-repeat: repeat-x;
       }
 
@@ -154,16 +188,52 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" 
-    crossorigin="anonymous"></script>
-    
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" 
-    integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" 
-    crossorigin="anonymous"></script>
-    
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" 
-    integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" 
-    crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"
+      integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
+      crossorigin="anonymous"
+    ></script>
+
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"
+      integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
+      integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
+      crossorigin=""
+    />
+    <script
+      src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
+      integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
+      crossorigin=""
+    ></script>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
+      integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
+      crossorigin="anonymous"
+    />
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-118359086-2"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "UA-118359086-2");
+    </script>
   </body>
 </html>
